--- a/Templates/views/about.hbs
+++ b/Templates/views/about.hbs
@@ -41,7 +41,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
                 <div class="col-md-6 col-12 main_header_left">
                     <p>Welcome at My Weather App -</p>
                     <h1>I am A<span class="text_clr">Freelancer | Web Developer | Photographer  </span> and a Student..</h1>   
-                    <a href="https://rampata.netlify.app/"><button>About Me</button></a>                 
+                    <a href="https://rampata.netlify.app/" target="_blank"><button>About Me</button></a>                 
                 </div>
             </div>
         </div>
